Fixed validation error

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -20,7 +20,7 @@
     <script src="js/jsxFactory.js"></script>
     <script src="js/main.js" type="module"></script>
     
-    <link rel="stylesheet" href="css/style.css"></script>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body class="mdc-typography">
