done with code part

--- a/public/leaderboard.html
+++ b/public/leaderboard.html
@@ -12,7 +12,12 @@
             <!-- Hero head: will stick at the top -->
             <div class="hero-head">
                 <header class="navbar">
-                    <div class="container navbar-start">
+                    <div class="navbar-brand">
+                        <a href="index.html" class="navbar-item has-text-white has-text-weight-bold is-size-3">
+                        <p> simcar </p>
+                        </a>
+                    </div>
+                    <div class="navbar-start">
                         <a href="index.html" class="navbar-item">Design
                     </a>
                         <a href="leaderboard.html" class="navbar-item is-active">Leaderboard
@@ -26,6 +31,7 @@
                     <table class="table is-fullwidth">
                         <thead>
                             <tr>
+                                <th>Position</th>
                                 <th>Company</th>
                                 <th>Designer</th>
                                 <th>Prototype</th>
@@ -39,6 +45,6 @@
                 </div>
             </div>
         </section>
-    </body>
     <script src="js/leaderboard.js"></script>
+    </body>
 </html>
