--- a/public/index.html
+++ b/public/index.html
@@ -181,14 +181,14 @@
 				<label class="label">Special Thanks</label>
 			</div>
 			<div class="field-body">
-				<a target="_blank" href="https://skfb.ly/6TzIR"> RC-14 Model by Dahie</a>
+				<a target="_blank" href="https://skfb.ly/6TzIR">RC-14 Model by Dahie</a>
 			</div>
 		</div>
         <div class="field is-horizontal">
 			<div class="field-label">
 			</div>
 			<div class="field-body">
-				<a target="_blank" href="https://hdrihaven.com/hdri/?h=quattro_canti"> HDRI from HDRIHaven</a>
+				<a target="_blank" href="https://hdrihaven.com/hdri/?h=quattro_canti">Quattro Canti from HDRIHaven</a>
 			</div>
 		</div>
 	</div>
