Server sends back all appdata, submission is added to this

--- a/public/index.html
+++ b/public/index.html
@@ -38,7 +38,10 @@
     })
     .then( function( response ) {
       // do something with the reponse 
-      console.log( response )
+      return response.text()
+    })
+    .then( function( txt ) {
+      console.log( txt )
     })
 
     return false
