--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,8 @@
       <input type='number' id='userID' value=""><br><br>
 	  <label for="userPassword">User Password:</label><br>
       <input type='password' id='userPassword' value=""><br><br>
-      <br><button>submit</button>
+      <br><button id="submitButton">Submit</button>
+      <br><br><button id="resetButton">Reset</button>
     </form>
   </body>
   <script>
@@ -21,7 +22,6 @@
   const submit = function( e ) {
     // prevent default form action from being carried out
     e.preventDefault()
-
     const nameInput = document.querySelector( '#userName' ),
 		  idInput = document.querySelector( '#userID' ),
 		  passwordInput = document.querySelector( '#userPassword' ),
@@ -40,16 +40,46 @@
       // do something with the reponse 
       return response.text()
     })
-    .then( function( txt ) {
-      console.log( txt )
+    .then( function( text ) {
+      entries = text.split("},");
+      console.log("Data:")
+      for (const entry of entries) {
+        // console.log(entry+(entry.slice(-1) == "}" ? "" : "}"));
+        console.log( JSON.parse(entry+(entry.slice(-1) == "}" ? "" : "}")) );//can access elements with .elementName
+      }      
     })
+
+    return false
+  }
+  
+  const reset = function( e ) {
+    // prevent default form action from being carried out
+    e.preventDefault()
+
+    fetch( '/reset', {
+      method:'POST',
+      body: "{}" 
+    })
+    .then( function( response ) {
+      // do something with the reponse 
+      // return response.text()
+      console.log("RESET")
+    })
+    // .then( function( text ) {
+    //   // entries = text.split("},");
+    //   // for (const entry of entries) {
+    //   //   console.log(entry+(entry.slice(-1) == "}" ? "" : "}"));
+    //   // }      
+    // })
 
     return false
   }
 
   window.onload = function() {
-    const button = document.querySelector( 'button' )
-    button.onclick = submit
+    const submitButton = document.querySelector( '#submitButton' )
+    submitButton.onclick = submit
+    const resetButton = document.querySelector( '#resetButton' )
+    resetButton.onclick = reset
   }
 
   </script>
