adjusted index.html to validate

--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
       <h1>Billbo Swaggins' Car Dealership Inventory</h1>
     </div>
     <div class="left">
-      <form id="mainForm" action="">
+      <form id="mainForm">
         <input type='text' id='vehiclemake' placeholder="Vehicle Make Here">
         <input type='text' id='vehiclemodel' placeholder="Vehicle Model Here">
         <input type='text' id='vehicleyear' placeholder="Vehicle Year Here">
