--- a/public/index.html
+++ b/public/index.html
@@ -3,39 +3,73 @@
   <head>
     <title>CS4241 Assignment 2</title>
     <meta charset="utf-8">
+
+    <!--Links the in-house js and css-->
+    <script src="js/scripts.js"></script>
+    <link rel="stylesheet" href="css/styles.css">
+
+    <!--Links external scripts and styles-->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   </head>
-  <body>
-    <form action="">
-      <input type='text' id='yourname' value="your name here">
-      <button>submit</button>
-    </form>
+  <body style="background-color: #DCDCDC">
+    <nav class="navbar navbar-dark bg-dark">
+      <a class="navbar-brand" href="#">
+        <img src="https://images.emojiterra.com/google/android-10/512px/1f389.png" width="30" height="30" class="d-inline-block align-top" alt="Party Popper">
+        Party Guest List
+      </a>
+    </nav>
+    <div>
+      <div id="form-header" class="jumbotron">
+        <h1 id="form-title">Please fill this form out</h1>
+      </div>
+      <div id="form-section" class="jumbotron">
+        <form class="needs-validation" action="" novalidate>
+          <div class="form-row">
+            <div class="col-md-4 mb-3">
+              <label for="fName">First name</label>
+              <input type="text" class="form-control" id="fName" placeholder="John" required>
+              <div class="valid-feedback">
+                First name must be entered!
+              </div>
+            </div>
+            <div class="col-md-4 mb-3">
+              <label for="mName">Middle name</label>
+              <input type="text" class="form-control" id="mName" placeholder="Quentin">
+              <div class="valid-feedback">
+                Looks good!
+              </div>
+            </div>
+            <div class="col-md-4 mb-3">
+              <label for="lName">Last name name</label>
+              <input type="text" class="form-control" id="lName" placeholder="Smith" required>
+              <div class="valid-feedback">
+                Last name must be entered!
+              </div>
+            </div>
+          </div>
+          <div class="form-row">
+            <div class="col-md-6 mb-3">
+              <label for="gender">Gender</label>
+              <select class="form-control" id="gender">
+                <option>Male</option>
+                <option>Female</option>
+                <option>Other</option>
+              </select>
+              <div class="invalid-feedback">
+                A gender must be entered!
+              </div>
+            </div>
+            <div class="col-md-6 mb-3">
+              <label for="birthday">Birthday</label>
+              <input class="form-control" type="date" id="birthday" required>
+              <div class="invalid-feedback">
+                The guest is below the age of 18; they may not enter!
+              </div>
+            </div>
+          </div>
+          <button id="addGuestButton"class="btn btn-secondary" type="submit">Add Guest</button>
+        </form>
+      </div>
+    </div>
   </body>
-  <script>
-
-  const submit = function( e ) {
-    // prevent default form action from being carried out
-    e.preventDefault()
-
-    const input = document.querySelector( '#yourname' ),
-          json = { yourname: input.value },
-          body = JSON.stringify( json )
-
-    fetch( '/submit', {
-      method:'POST',
-      body 
-    })
-    .then( function( response ) {
-      // do something with the reponse 
-      console.log( response )
-    })
-
-    return false
-  }
-
-  window.onload = function() {
-    const button = document.querySelector( 'button' )
-    button.onclick = submit
-  }
-
-  </script>
 </html>
