--- a/public/index.html
+++ b/public/index.html
@@ -3,39 +3,46 @@
   <head>
     <title>CS4241 Assignment 2</title>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="css/style.css">
+    <script src="//cdn.jsdelivr.net/npm/pouchdb@7.2.1/dist/pouchdb.min.js"></script>
+    <script src="js/base.js"></script>
+    <script src="js/app.js"></script>
   </head>
   <body>
-    <form action="">
-      <input type='text' id='yourname' value="your name here">
-      <button>submit</button>
+    <h1>Student Course Registration</h1><br>
+    <div class="v_line"></div>
+    <br><br>
+    <div class="container">
+    <form action="" method="post">
+      <input type='text' id='name' value="your name here"><br><br>
+      <input type='text' id="major" value="your major here"><br><br>
+      <input type="text" id="course" value="course ID"> <br><br>
+      <button onclick="">submit</button>
     </form>
+    </div>
+    <br><br>
+    <div class="v_line"></div>
+    <br><br>
+    <label for="students">Select a student:</label>
+    <select name="students" id="students">
+      <option value="volvo">Volvo</option>
+      <option value="saab">Saab</option>
+      <option value="opel">Opel</option>
+      <option value="audi">Audi</option>
+    </select>
+    <br><br>
+    <div class="table_container">
+  <table>
+    <tr>
+      <th>Student</th>
+      <th>Major</th>
+    </tr>
+    <tr>
+      <td>CS3516</td>
+      <td>A 2019</td>
+    </tr>
+  </table>
+    </div>
   </body>
-  <script>
 
-  const submit = function( e ) {
-    // prevent default form action from being carried out
-    e.preventDefault()
-
-    const input = document.querySelector( '#yourname' ),
-          json = { yourname: input.value },
-          body = JSON.stringify( json )
-
-    fetch( '/submit', {
-      method:'POST',
-      body 
-    })
-    .then( function( response ) {
-      // do something with the reponse 
-      console.log( response )
-    })
-
-    return false
-  }
-
-  window.onload = function() {
-    const button = document.querySelector( 'button' )
-    button.onclick = submit
-  }
-
-  </script>
 </html>
